sdks/swift/Sources/CGoudEngine/include/goud_engine.h

/**
 * Opaque identifier for an engine context.
 */
typedef struct GoudContextId {
    uint64_t _0;
} GoudContextId;
/**
 * FFI-compatible contact information from a collision.
 */
typedef struct GoudContact {
    /**
     * Contact point X coordinate
     */
    float point_x;
    /**
     * Contact point Y coordinate
     */
    float point_y;
    /**
     * Collision normal X component (unit vector pointing from A to B)
     */
    float normal_x;
    /**
     * Collision normal Y component
     */
    float normal_y;
    /**
     * Penetration depth (positive = overlapping)
     */
    float penetration;
} GoudContact;
/**
 * FFI-safe Transform2D representation.
 */
typedef struct FfiTransform2D {
    /**
     * Position X in world space.
     */
    float position_x;
    /**
     * Position Y in world space.
     */
    float position_y;
    /**
     * Rotation angle in radians.
     */
    float rotation;
    /**
     * Scale along X axis.
     */
    float scale_x;
    /**
     * Scale along Y axis.
     */
    float scale_y;
} FfiTransform2D;
/**
 * FFI-compatible error code type.
 */
typedef int32_t GoudErrorCode;
/**
 * FFI-safe result type for returning success/failure status across the FFI boundary.
 */
typedef struct GoudResult {
    /**
     * The error code. `SUCCESS` (0) on success, error code on failure.
     */
    GoudErrorCode code;
    /**
     * True if the operation succeeded, false otherwise.
     */
    bool success;
} GoudResult;
/**
 * Spawns a new empty entity in the world.
 */
uint64_t goud_entity_spawn_empty(struct GoudContextId context_id);
/**
 * Spawns multiple empty entities in a single batch.
 */
uint32_t goud_entity_spawn_batch(struct GoudContextId context_id, uint32_t count, uint64_t *out_entities);
/**
 * Despawns an entity, removing it and all its components from the world.
 */
GoudResult goud_entity_despawn(struct GoudContextId context_id, uint64_t entity_id);
/**
 * Despawns multiple entities in a single batch.
 */
uint32_t goud_entity_despawn_batch(struct GoudContextId context_id, const uint64_t *entity_ids, uint32_t count);
/**
 * Clones an entity, creating a new entity with copies of all cloneable components.
 */
uint64_t goud_entity_clone(struct GoudContextId context_id, uint64_t entity_id);
/**
 * Clones an entity and all its descendants recursively.
 */
uint64_t goud_entity_clone_recursive(struct GoudContextId context_id, uint64_t entity_id);
/**
 * Checks if an entity is currently alive in the world.
 */
bool goud_entity_is_alive(struct GoudContextId context_id, uint64_t entity_id);
/**
 * Gets the total number of alive entities in the world.
 */
uint32_t goud_entity_count(struct GoudContextId context_id);
/**
 * Checks if multiple entities are currently alive in the world.
 */
uint32_t goud_entity_is_alive_batch(struct GoudContextId context_id, const uint64_t *entity_ids, uint32_t count, uint8_t *out_results);
/**
 * Sets the 3D camera position.
 */
bool goud_renderer3d_set_camera_position(struct GoudContextId context_id, float x, float y, float z);
/**
 * Sets the 3D camera rotation (pitch, yaw, roll in degrees).
 */
bool goud_renderer3d_set_camera_rotation(struct GoudContextId context_id, float pitch, float yaw, float roll);
/**
 * Configures the ground grid.
 */
bool goud_renderer3d_configure_grid(struct GoudContextId context_id, bool enabled, float size, uint32_t divisions);
/**
 * Sets grid enabled state.
 */
bool goud_renderer3d_set_grid_enabled(struct GoudContextId context_id, bool enabled);
/**
 * Configures the skybox/background color.
 */
bool goud_renderer3d_configure_skybox(struct GoudContextId context_id, bool enabled, float r, float g, float b, float a);
/**
 * Configures fog settings.
 */
bool goud_renderer3d_configure_fog(struct GoudContextId context_id, bool enabled, float r, float g, float b, float density);
/**
 * Sets fog enabled state.
 */
bool goud_renderer3d_set_fog_enabled(struct GoudContextId context_id, bool enabled);
/**
 * Renders all 3D objects in the scene.
 */
bool goud_renderer3d_render(struct GoudContextId context_id);
/**
 * Renders all 3D objects (alias for goud_renderer3d_render).
 */
bool goud_renderer3d_render_all(struct GoudContextId context_id);
/**
 * Updates a light's properties.
 */
bool goud_renderer3d_update_light(struct GoudContextId context_id, uint32_t light_id, int32_t light_type, float pos_x, float pos_y, float pos_z, float dir_x, float dir_y, float dir_z, float r, float g, float b, float intensity, float range, float spot_angle);
/**
 * Removes a light from the scene.
 */
bool goud_renderer3d_remove_light(struct GoudContextId context_id, uint32_t light_id);
/* === Input === */

/**
 * FFI-compatible key code.
 */
typedef int32_t GoudKeyCode;
/**
 * FFI-compatible mouse button code.
 */
typedef int32_t GoudMouseButton;
/**
 * Maps an action name to a keyboard key.
 */
bool goud_input_map_action_key(struct GoudContextId context_id, const char *action_name, GoudKeyCode key);
/**
 * Returns `true` if the specified action is currently pressed.
 */
bool goud_input_action_pressed(struct GoudContextId context_id, const char *action_name);
/**
 * Returns `true` if the specified action was just pressed this frame.
 */
bool goud_input_action_just_pressed(struct GoudContextId context_id, const char *action_name);
/**
 * Returns `true` if the specified action was just released this frame.
 */
bool goud_input_action_just_released(struct GoudContextId context_id, const char *action_name);
/**
 * Returns `true` if the specified key is currently pressed.
 */
bool goud_input_key_pressed(struct GoudContextId context_id, GoudKeyCode key);
/**
 * Returns `true` if the specified key was just pressed this frame.
 */
bool goud_input_key_just_pressed(struct GoudContextId context_id, GoudKeyCode key);
/**
 * Returns `true` if the specified key was just released this frame.
 */
bool goud_input_key_just_released(struct GoudContextId context_id, GoudKeyCode key);
/**
 * Returns `true` if the specified mouse button is currently pressed.
 */
bool goud_input_mouse_button_pressed(struct GoudContextId context_id, GoudMouseButton button);
/**
 * Returns `true` if the specified mouse button was just pressed this frame.
 */
bool goud_input_mouse_button_just_pressed(struct GoudContextId context_id, GoudMouseButton button);
/**
 * Returns `true` if the specified mouse button was just released this frame.
 */
bool goud_input_mouse_button_just_released(struct GoudContextId context_id, GoudMouseButton button);
/**
 * Gets the current mouse position in screen coordinates.
 */
bool goud_input_get_mouse_position(struct GoudContextId context_id, float *out_x, float *out_y);
/**
 * Gets the mouse movement delta since the last frame.
 */
bool goud_input_get_mouse_delta(struct GoudContextId context_id, float *out_dx, float *out_dy);
/**
 * Gets the scroll wheel delta since the last frame.
 */
bool goud_input_get_scroll_delta(struct GoudContextId context_id, float *out_dx, float *out_dy);
/**
 * Creates a default Transform2D at the origin with no rotation and unit scale.
 */
struct FfiTransform2D goud_transform2d_default(void);
/**
 * Creates a Transform2D at the specified position with default rotation and scale.
 */
struct FfiTransform2D goud_transform2d_from_position(float x, float y);
/**
 * Creates a Transform2D at the origin with the specified rotation.
 */
struct FfiTransform2D goud_transform2d_from_rotation(float rotation);
/**
 * Creates a Transform2D at the origin with the specified rotation in degrees.
 */
struct FfiTransform2D goud_transform2d_from_rotation_degrees(float degrees);
/**
 * Creates a Transform2D at the origin with the specified scale.
 */
struct FfiTransform2D goud_transform2d_from_scale(float scale_x, float scale_y);
/**
 * Creates a Transform2D with uniform scale.
 */
struct FfiTransform2D goud_transform2d_from_scale_uniform(float scale);
/**
 * Creates a Transform2D with position and rotation.
 */
struct FfiTransform2D goud_transform2d_from_position_rotation(float x, float y, float rotation);
/**
 * Creates a Transform2D with all components specified.
 */
struct FfiTransform2D goud_transform2d_new(float pos_x, float pos_y, float rotation, float scale_x, float scale_y);
/**
 * Creates a Transform2D looking at a target position.
 */
struct FfiTransform2D goud_transform2d_look_at(float pos_x, float pos_y, float target_x, float target_y);
/**
 * Translates the transform by the given offset in world space.
 */
void goud_transform2d_translate(struct FfiTransform2D *transform, float dx, float dy);
/* === Collision === */

/**
 * Checks collision between two axis-aligned bounding boxes.
 */
bool goud_collision_aabb_aabb(float center_a_x, float center_a_y, float half_w_a, float half_h_a, float center_b_x, float center_b_y, float half_w_b, float half_h_b, struct GoudContact *out_contact);
/**
 * Checks collision between two circles.
 */
bool goud_collision_circle_circle(float center_a_x, float center_a_y, float radius_a, float center_b_x, float center_b_y, float radius_b, struct GoudContact *out_contact);
/**
 * Checks collision between a circle and an axis-aligned bounding box.
 */
bool goud_collision_circle_aabb(float circle_x, float circle_y, float circle_radius, float box_x, float box_y, float box_hw, float box_hh, struct GoudContact *out_contact);
/**
 * Checks if a point is inside a rectangle.
 */
bool goud_collision_point_in_rect(float point_x, float point_y, float rect_x, float rect_y, float rect_w, float rect_h);
/**
 * Checks if a point is inside a circle.
 */
bool goud_collision_point_in_circle(float point_x, float point_y, float circle_x, float circle_y, float circle_radius);
/**
 * Fast check if two AABBs overlap (no contact info).
 */
bool goud_collision_aabb_overlap(float min_a_x, float min_a_y, float max_a_x, float max_a_y, float min_b_x, float min_b_y, float max_b_x, float max_b_y);
/**
 * Fast check if two circles overlap (no contact info).
 */
bool goud_collision_circle_overlap(float x1, float y1, float r1, float x2, float y2, float r2);
/**
 * Returns the distance between two points.
 */
float goud_collision_distance(float x1, float y1, float x2, float y2);
/**
 * Returns the squared distance between two points.
 */
float goud_collision_distance_squared(float x1, float y1, float x2, float y2);