sdks/csharp/generated/NativeMethods.g.cs


        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_renderer3d_update_light(GoudContextId ctx, uint light_id, int light_type, float pos_x, float pos_y, float pos_z, float dir_x, float dir_y, float dir_z, float r, float g, float b, float intensity, float range, float spot_angle);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_renderer3d_remove_light(GoudContextId ctx, uint light_id);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_renderer3d_set_camera_position(GoudContextId ctx, float x, float y, float z);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_renderer3d_set_camera_rotation(GoudContextId ctx, float pitch, float yaw, float roll);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_renderer3d_configure_grid(GoudContextId ctx, [MarshalAs(UnmanagedType.U1)] bool enabled, float size, uint divisions);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_renderer3d_set_grid_enabled(GoudContextId ctx, [MarshalAs(UnmanagedType.U1)] bool enabled);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_renderer3d_configure_skybox(GoudContextId ctx, [MarshalAs(UnmanagedType.U1)] bool enabled, float r, float g, float b, float a);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_renderer3d_configure_fog(GoudContextId ctx, [MarshalAs(UnmanagedType.U1)] bool enabled, float r, float g, float b, float density);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_renderer3d_set_fog_enabled(GoudContextId ctx, [MarshalAs(UnmanagedType.U1)] bool enabled);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_renderer3d_render(GoudContextId ctx);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_renderer3d_render_all(GoudContextId ctx);

        // input
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_input_key_pressed(GoudContextId ctx, int key);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_input_key_just_pressed(GoudContextId ctx, int key);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_input_key_just_released(GoudContextId ctx, int key);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_input_mouse_button_pressed(GoudContextId ctx, int button);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_input_mouse_button_just_pressed(GoudContextId ctx, int button);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_input_mouse_button_just_released(GoudContextId ctx, int button);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_input_get_mouse_position(GoudContextId ctx, ref float out_x, ref float out_y);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_input_get_mouse_delta(GoudContextId ctx, ref float out_dx, ref float out_dy);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_input_get_scroll_delta(GoudContextId ctx, ref float out_dx, ref float out_dy);

        // input_actions
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_input_map_action_key(GoudContextId ctx, [MarshalAs(UnmanagedType.LPStr)] string action_name, int key);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_input_action_pressed(GoudContextId ctx, [MarshalAs(UnmanagedType.LPStr)] string action_name);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_input_action_just_pressed(GoudContextId ctx, [MarshalAs(UnmanagedType.LPStr)] string action_name);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_input_action_just_released(GoudContextId ctx, [MarshalAs(UnmanagedType.LPStr)] string action_name);

        // entity
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern ulong goud_entity_spawn_empty(GoudContextId ctx);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern GoudResult goud_entity_despawn(GoudContextId ctx, ulong entity_id);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_entity_is_alive(GoudContextId ctx, ulong entity_id);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint goud_entity_is_alive_batch(GoudContextId ctx, IntPtr entity_ids, uint count, IntPtr out_results);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint goud_entity_count(GoudContextId ctx);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint goud_entity_spawn_batch(GoudContextId ctx, uint count, ref ulong out_entities);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint goud_entity_despawn_batch(GoudContextId ctx, IntPtr entity_ids, uint count);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern ulong goud_entity_clone(GoudContextId ctx, ulong entity_id);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern ulong goud_entity_clone_recursive(GoudContextId ctx, ulong entity_id);

        // collision
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_collision_aabb_aabb(float center_a_x, float center_a_y, float half_w_a, float half_h_a, float center_b_x, float center_b_y, float half_w_b, float half_h_b, ref GoudContact out_contact);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_collision_circle_circle(float center_a_x, float center_a_y, float radius_a, float center_b_x, float center_b_y, float radius_b, ref GoudContact out_contact);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_collision_circle_aabb(float circle_x, float circle_y, float circle_radius, float box_x, float box_y, float box_hw, float box_hh, ref GoudContact out_contact);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_collision_point_in_rect(float point_x, float point_y, float rect_x, float rect_y, float rect_w, float rect_h);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_collision_point_in_circle(float point_x, float point_y, float circle_x, float circle_y, float circle_radius);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_collision_aabb_overlap(float min_a_x, float min_a_y, float max_a_x, float max_a_y, float min_b_x, float min_b_y, float max_b_x, float max_b_y);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool goud_collision_circle_overlap(float x1, float y1, float r1, float x2, float y2, float r2);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern float goud_collision_distance(float x1, float y1, float x2, float y2);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern float goud_collision_distance_squared(float x1, float y1, float x2, float y2);

        // component_transform2d
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiTransform2D goud_transform2d_default();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiTransform2D goud_transform2d_from_position(float x, float y);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiTransform2D goud_transform2d_from_rotation(float rotation);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiTransform2D goud_transform2d_from_rotation_degrees(float degrees);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiTransform2D goud_transform2d_from_scale(float scale_x, float scale_y);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiTransform2D goud_transform2d_from_scale_uniform(float scale);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiTransform2D goud_transform2d_from_position_rotation(float x, float y, float rotation);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiTransform2D goud_transform2d_new(float pos_x, float pos_y, float rotation, float scale_x, float scale_y);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern FfiTransform2D goud_transform2d_look_at(float pos_x, float pos_y, float target_x, float target_y);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void goud_transform2d_translate(ref FfiTransform2D transform, float dx, float dy);
